fix spacing in web pages

--- a/src/assets/css/feature2.css
+++ b/src/assets/css/feature2.css
@@ -13,6 +13,8 @@
     align-items: center;
     justify-content: center;
     top: 2650px;
+    margin-top: 100px;
+    margin-bottom: 100px;
   }
   
   .overlay-feature2 {
