--- a/src/assets/css/markethome.css
+++ b/src/assets/css/markethome.css
@@ -4,6 +4,7 @@
     gap: 16px;
     position: relative;
     top: 1500px;
+    margin-bottom: 50px;
   }
   
   .row-1,
