--- a/src/assets/css/window-feature.css
+++ b/src/assets/css/window-feature.css
@@ -7,6 +7,8 @@
     margin: 0 auto;
     max-width: 1000px;
     width: 100%;
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
 
 .grid-item {
